# Plastic-bottle-detection

./: README.md  esp32wifi.py  main.py  pyproject.toml  train.py
doc/: model_performance.md
esp32/: esp32wifi.txt
notebooks/: exploration.ipynb
plastic_bottle_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/data/: data_process1.py  data_process2.py  data_process3.py  data_process4.py
src/module/: train.py
src/utils/: augmentations.py  metrics.py
